# property_lead_system

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
Config/: settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_property_options_alter_property_slug_and_more.py
core/templates/core/: all_properties.html  base.html  card.html  card_home.html  contact.html  footer.html  home.html  navigation.html  properties_detail.html
property_lead/: apps.py
staticfiles/img/: Unconfirmed 180960.crdownload
staticfiles/js/: script.js
theme/static_src/src/: styles.css
theme/templates/: base.html
